--- a/index.html
+++ b/index.html
@@ -8,105 +8,57 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Todo App</title>
 </head>
-<body onload="checkLogged()" >
-  
-  <!-- <div class="user-infor-box"> 
-    <div class="user-infor"></div>
-      <h5 onclick="logout();">Đăng xuất</h5>
-  </div> -->
-  <div class="cont_principal">
-    <div class="cont_centrar">
-      <div class="cont_todo_list_top">
-          <div class="cont_titulo_cont">
-              <h3>THINGS TO DO</h3>
-          </div>
-          <div class="cont_add_titulo_cont">
-              <a href="#e" onclick="add_new()"><i class="fas fa-plus"></i></a>
-          </div>
+<body onload="todo()">
+  <div class="container index">
+    <div class="header">
+      
+      <div class="topic">
+        <a class="btn btn-info btn-lg" onclick="Logout()">
+            Log out
+        </a>
       </div>
-      <div class="user-infor-box">
-          <div class="user-infor"></div>
-          <h5 onclick="logout();">LOGOUT</h5>
       </div>
-               <!--   End cont_todo_list_top  -->  
-      <div class="cont_crear_new">
-        <table class="table">
-          <tr>
-              <th>Action</th>
-              <th>Status</th>
-              <th>Deadline</th>
-          </tr>
-          <tr>
-            <td>
-              <input type="text" class="input_title_desc" required/>      
-              <!-- End td 2 -->
-            </td>
-            <td>
-              <select name="" id="action_select" required>
-                <option value="In Progress">In Progress</option>
-                <option value="Completed">Completed</option>
-                <option value="Pause">Pause</option>
-              </select>
-                  <!-- End td 1 -->
-            </td>      
-            <td>
-              <input type="date" class="input_description_title"  id="date_select" required/>      
-            </td>
-          </tr>
-          <tr>
-            <th class="titl_description" >Description</th>
-          </tr>
-          <tr> 
-            <td colspan="3">
-              <input type="text" class="input_description" required />
-            </td>
-          </tr>
-          <tr>
-            <td colspan="3">
-               <button class="btn_add_fin"  onclick="add_to_list()">ADD</button>
-            </td>
-          </tr>
-        </table>
-            <!--   End cont_crear_new  --> 
-      </div>
-
-      <div class="cont_princ_lists">
-        <ul>
-          <li class="list_shopping li_num_0_1">
-            <div class="col_md_1_list">
-              <p>In Progress</p>
+      <div class="cover">
+        <form action="#" class="form">
+            <input type='hidden' id="id">
+            <div class="mb-3 col-xs-6">
+                <label for="formGroupExampleInput" class="form-label">Name Project</label>
+                <input type="text" class="form-control" id="work" required="required" placeholder="some thing to do?" onblur="checkWork(this);">
+                <span class="txt-test" id="error_work"></span>
             </div>
-            <div class="col_md_2_list">
-              <h4>cho gà ăn</h4>
-              <p>ăn 11 lon thoi</p>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Description</label>
+                <textarea class="form-control" id="description" rows="3" placeholder="description" onblur="checkDescription(this);" required></textarea>
+                <span class="txt-test" id="error_description"></span>
             </div>
-            <div class="col_md_3_list">
-              <div class="cont_text_date">
-                  <p>20/9/2021</p>      
-              </div>    
-              <div class="cont_btns_options">
-                <ul>
-                    <li><a href="#" onclick="finish_action('0','0_1');"><i class="fas fa-trash-alt"></i></a></li>
-                    <li><a href="#" onclick="edit_action('0','0_1');"><i class="fas fa-edit"></i></a></li>
-                </ul>    
-              </div>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label">Deadline</label>
+                <input type="date" class="form-control" id="day" placeholder="Example input placeholder" onblur="checkDay(this);" required>
+                <span class="txt-test" id="error_day"></span>
             </div>
-          </li>
-        </ul>
-          <!--   End cont_todo_list_top  -->   
-      </div>
-            <!--   End cont_central  -->
-    </div>
-  </div>
-  <div class="login-success" style="top: 0px;left: 0px; display: none;">
-        <div>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label">Status</label>
+                <select class="form-select" aria-label="Default select example" id="status" onchange="validateSelectBox(this)" required>
+                    <option value="In Progress">In Progress</option>
+                    <option value="Pause">Pause</option>
+                    <option value="Completed">Completed</option>
+                  </select>
+            </div>
+            <div class="col-12 action">
+                <button id="add" type="submit" class="btn btn-primary" onclick="addData();return false;">ADD</button>
+                <button id="save" style="display: none;" type="submit" class="btn btn-primary btn_index">Save</button>
+            </div>
+        </form>
+        <div id="view-user">
+          <h1>Todo List</h1>
+            <table class="table table-dark" width="100%" id="list-user">
+            </table>
         </div>
-  </div>
-  <div class="login-fail" style="top: 0px;left: 0px; display: none;">
-    <div>
-    </div>
-  </div>
-   
+      </div>
+      <div id="paging">
+
+      </div>
+  
 
     <script  src="./assets/js/index.js"></script>
 </body>
